--- a/rolam.css
+++ b/rolam.css
@@ -72,6 +72,18 @@ body{
     text-align: justify;
     font-size: 18px;
 }
+.stop{
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    text-shadow: 2px 2px black;
+}
+.angolSzoveg{
+    display: none;
+}
+
 .silencio{
     position: absolute;
     left: 50%;
@@ -136,12 +148,15 @@ body{
         background: rgba(255, 255, 255, 0.5);
         position: absolute;
         left: 50%;
-        top: 75%;
+        top: 115%;
         transform: translate(-50%, -50%);
         border-radius: 10px; 
     }
+    .slideContainer{
+        top: 38%;
+    }
     .diak{
-        width: 400px;
+        width: 800px;
         height: auto;
     }
 
